05-dockerfiles-s2i/nginx-custom/manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-custom
spec:
  selector:
    app: nginx-custom
  ports:
  - protocol: TCP
    port: 8080
  type: ClusterIP
